maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:15: error: '=>' expected but 'case' found.
      case false gauche()
      ^